Bug 399392 - Crash in KWin::QPA::SharingPlatformContext::makeCurrent with 5.12 making QtQuick windows
Summary: Crash in KWin::QPA::SharingPlatformContext::makeCurrent with 5.12 making QtQu...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (show other bugs)
Version: 5.14.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-04 23:33 UTC by David Edmundson
Modified: 2018-10-05 13:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2018-10-04 23:33:51 UTC
Crash in Qt5.12 showing a QQuickScene (classic tab switcher or switch desktop)

Caused by 8b3a6cfbfb21a71b8efc2e3a91006712238db6fe in qtbase, but no Qt QPA seems to have issues. 

I'm using the threaded render loop

(gdb) bt
#0  0x00007fb6b731f348 in QOpenGLContext::format() const (this=0x0) at /home/david/projects/qt5/qtbase/src/gui/kernel/qopenglcontext.cpp:1161
#1  0x00007fb6b731f45f in QOpenGLContext::isOpenGLES() const (this=<optimized out>)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qopenglcontext.cpp:1311
#2  0x00007fb6b75f8c73 in effectiveInternalFormat (internalFormat=0) at /home/david/projects/qt5/qtbase/src/gui/opengl/qopenglframebufferobject.cpp:883
#3  0x00007fb6b75f8c73 in QOpenGLFramebufferObject::QOpenGLFramebufferObject(int, int, QOpenGLFramebufferObject::Attachment, unsigned int, unsigned int) (this=0x55e08cf278a0, width=492, height=127, attachment=QOpenGLFramebufferObject::CombinedDepthStencil, target=3553, internalFormat=0)
    at /home/david/projects/qt5/qtbase/src/gui/opengl/qopenglframebufferobject.cpp:974
#4  0x00007fb6ac1f9978 in KWin::QPA::Window::createFBO() (this=0x55e08ceb8570)
    at /home/david/projects/kde5/src/kde/workspace/kwin/plugins/qpa/window.cpp:160
#5  0x00007fb6ac1f9806 in KWin::QPA::Window::bindContentFBO() (this=0x55e08ceb8570)
    at /home/david/projects/kde5/src/kde/workspace/kwin/plugins/qpa/window.cpp:142
#6  0x00007fb6ac1f86aa in KWin::QPA::SharingPlatformContext::makeCurrent(QPlatformSurface*) (this=0x55e08cee92d0, surface=0x55e08ceb8570)
    at /home/david/projects/kde5/src/kde/workspace/kwin/plugins/qpa/sharingplatformcontext.cpp:52
#7  0x00007fb6b732128c in QOpenGLContext::makeCurrent(QSurface*) (this=0x55e08cee9fd0, surface=0x55e08cd17a80)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qopenglcontext.cpp:987
#8  0x00007fb6bdc6dfe7 in QSGGuiThreadRenderLoop::renderWindow(QQuickWindow*) (this=this@entry=0x55e08c8c8ba0, window=<optimized out>)
    at /home/david/projects/qt5/qtdeclarative/src/quick/scenegraph/qsgrenderloop.cpp:380
#9  0x00007fb6bdc6ec19 in QSGGuiThreadRenderLoop::exposureChanged(QQuickWindow*) (this=0x55e08c8c8ba0, window=<optimized out>)
    at /home/david/projects/qt5/qtdeclarative/src/quick/scenegraph/qsgrenderloop.cpp:483
#10 0x00007fb6bdcec518 in QQuickWindow::exposeEvent(QExposeEvent*) (this=<optimized out>)
    at /home/david/projects/qt5/qtdeclarative/src/quick/items/qquickwindow.cpp:229
#11 0x00007fb6b72e71b4 in QWindow::event(QEvent*) (this=this@entry=0x55e08cd17a70, ev=ev@entry=0x7ffd40de8670)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qwindow.cpp:2307
#12 0x00007fb6bdcfd6d7 in QQuickWindow::event(QEvent*) (this=0x55e08cd17a70, e=0x7ffd40de8670)
    at /home/david/projects/qt5/qtdeclarative/src/quick/items/qquickwindow.cpp:1658
#13 0x00007fb690940eb7 in PlasmaQuick::Dialog::event(QEvent*) (this=0x55e08cd17a70, event=0x7ffd40de8670)
    at /home/david/projects/kde5/src/frameworks/plasma-framework/src/plasmaquick/dialog.cpp:1306
#14 0x00007fb6b78f9fdd in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=this@entry=0x55e08c324a90, receiver=receiver@entry=0x55e08cd17a70, e=e@entry=0x7ffd40de8670) at /home/david/projects/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3752
#15 0x00007fb6b7901da3 in QApplication::notify(QObject*, QEvent*) (this=0x7ffd40dee8d0, receiver=0x55e08cd17a70, e=0x7ffd40de8670)
    at /home/david/projects/qt5/qtbase/src/widgets/kernel/qapplication.cpp:3109
#16 0x00007fb6b6edc6eb in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55e08cd17a70, event=0x7ffd40de8670)
    at /home/david/projects/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1057
#17 0x00007fb6b6edc964 in QCoreApplication::sendSpontaneousEvent(QObject*, QEvent*) (receiver=receiver@entry=0x55e08cd17a70, event=event@entry=0x7ffd40de8670) at /home/david/projects/qt5/qtbase/src/corelib/kernel/qcoreapplication.cpp:1459
#18 0x00007fb6b72dbdc1 in QGuiApplicationPrivate::processExposeEvent(QWindowSystemInterfacePrivate::ExposeEvent*) (e=<optimized out>)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qguiapplication.cpp:3065
#19 0x00007fb6b72dbf9c in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) (e=e@entry=0x55e08cee73e0)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qguiapplication.cpp:1901
#20 0x00007fb6b72ad161 in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (flags=flags@entry=...)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qwindowsysteminterface.cpp:1062
#21 0x00007fb6b72ad546 in QWindowSystemInterface::flushWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) (flags=flags@entry=...)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qwindowsysteminterface.cpp:1031
#22 0x00007fb6b72cafad in QPlatformWindow::setVisible(bool) (this=0x55e08ceb8570, visible=<optimized out>)
    at ../../include/QtCore/../../../../qt5/qtbase/src/corelib/global/qflags.h:120
#23 0x00007fb6ac1f92a0 in KWin::QPA::Window::setVisible(bool) (this=0x55e08ceb8570, visible=true)
    at /home/david/projects/kde5/src/kde/workspace/kwin/plugins/qpa/window.cpp:78
#24 0x00007fb6b72e6dc1 in QWindowPrivate::setVisible(bool) (this=0x55e08ccff6d0, visible=<optimized out>)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qwindow.cpp:402
#25 0x00007fb6b72df6ba in QWindow::setVisible(bool) (this=<optimized out>, visible=<optimized out>)
    at /home/david/projects/qt5/qtbase/src/gui/kernel/qwindow.cpp:609
#26 0x00007fb6909411b3 in PlasmaQuick::Dialog::setVisible(bool) (this=0x55e08cd17a70, visible=true)
Comment 1 David Edmundson 2018-10-05 13:36:26 UTC
Git commit 6ebfa59331b7febf162d05eef8316b12d559de9b by David Edmundson.
Committed on 05/10/2018 at 13:04.
Pushed by davidedmundson into branch 'Plasma/5.14'.

[plugins/qpa] Don't crash on Qt5.12 OpengGL::makeCurrent

Summary:
QOpenGLContext was changed to call platform->makeCurrent before it
called setCurrentContext.

Because we bind window FBO and ultimately that calls
QOpenGlContext::format we need Qt to know which context is current so it
can tell us the format.

This matches the QtWayland EGL code.

Test Plan:
Switched virtual desktop with the OSD (previously reliably crashed)
Now it doesn't

Reviewers: #kwin, zzag

Reviewed By: #kwin, zzag

Subscribers: zzag, kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D15957

M  +3    -0    plugins/qpa/sharingplatformcontext.cpp

https://commits.kde.org/kwin/6ebfa59331b7febf162d05eef8316b12d559de9b